Fix posts spacing

--- a/assets/sass/site.scss
+++ b/assets/sass/site.scss
@@ -217,7 +217,6 @@ iframe.showterm {
 }
 
 .posts {
-  margin-top: 5em;
   article {
     border-top: 1px solid $border;
     position: relative;
